--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,7 @@
 {
 	"@metadata": {
 	},
-	"bugzilla-desc": "This extension allows read-only integration with Bugzilla via the REST API"
+	"bugzilla-desc": "This extension allows read-only integration with Bugzilla via the REST API",
+	"sInfo": "Showing _START_ to _END_ of _TOTAL_ entries"
+
 }
